fix: reduce scrollbar width

--- a/src/assets/sass/_utilities.sass
+++ b/src/assets/sass/_utilities.sass
@@ -35,7 +35,7 @@
   font-size: nth($font-sizes, 4)
   font-weight: 600
   margin-right: 1em
-  
+
 .transition
   transition: 0.25s all
 
@@ -64,7 +64,7 @@
 
 .shadow
   box-shadow: 0 30px 40px rgba(0,0,0,.1)
-  
+
 // Bg color
 .bg-primary
   background-color: $primary
@@ -78,10 +78,10 @@
   background-color: $bg-dark
   &:not(.nohover):hover
     background-color: lighten($bg-dark, 10%)
-  
+
   &:not(.nohover):active
     background-color: lighten($bg-dark, 15%)
-    
+
 .bg-paper
   background-color: $bg-paper
   &:not(.nohover):hover
@@ -94,7 +94,7 @@
   background-color: $bg-base
   &:not(.nohover):hover
     background-color: lighten($bg-base, 10%)
-  
+
   &:not(.nohover):active
     background-color: lighten($bg-base, 20%)
 
@@ -144,7 +144,7 @@
   &:after
     transform: rotate(135deg)
 
-  &.open 
+  &.open
     transform: rotate(0)
     transform: translateY(-6px)
     &:before
@@ -171,7 +171,7 @@ thead
 table
   width: 100%
   border-collapse: collapse
-  
+
 th
   padding: 1em
   text-align: left
@@ -191,15 +191,15 @@ input
   &:focus + label, &:not(&:placeholder-shown) + label
     top: -2em
     font-size: nth($font-sizes, 5)
-  
+
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button
   -webkit-appearance: none
   margin: 0
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
 input:-webkit-autofill:active
   -webkit-background-clip: text
   -webkit-text-fill-color: $text-primary
@@ -209,7 +209,7 @@ textarea, button
 
 // Scrollbar
 ::-webkit-scrollbar
-  width: 7px
+  width: 4px
 
 ::-webkit-scrollbar-track
   background-color: darken($primary, 45%)
@@ -220,4 +220,3 @@ textarea, button
     background-color: darken($primary, 10%)
   &:active
     background-color: darken($primary, 20%)
-  
